# hwtrunk

./: .gitignore  CMakeLists.txt  README.md  backup  build.sh
Trd/lua-5.1.4/src/: lua  luac
Trd/pbc/: pbc.lua
Trd/protoc-gen-lua/: 官方原始版本更改说明.txt
Trd/protoc-gen-lua/protobuf/: protobuf.lua
base/include/: base_client_pool.h  base_epoll.h  base_include.h  base_lock.h  base_net_define.h  base_queue.h  base_sandbox.h  base_signal.h  base_socket.h  base_socket_server.h  base_stream.h  base_thread.h  base_unpack.h  base_util.h
base/src/: CMakeLists.txt  base_client_pool.cpp  base_epoll.cpp  base_sandbox.cpp  base_signal.cpp  base_socket.cpp  base_socket_server.cpp  base_stream.cpp  base_thread.cpp  base_unpack.cpp
client/src/: CMakeLists.txt  main.cpp  multimain.cpp
common/include/: AI.pb.h  AskLogin.pb.h  Common.pb.h  Map.pb.h  RetCode.pb.h  pack_protocol.h
common/src/: AI.pb.cc  AskLogin.pb.cc  CMakeLists.txt  Common.pb.cc  Map.pb.cc  RetCode.pb.cc  pack_protocol.h
game/lua/: login.lua  preload.lua  update.lua
game/src/: CMakeLists.txt  main.cpp
protocal/: proto.conf  protocol_info.lua
protocal/pbc/: login.pb
protocal/proto/: login.proto
tool/: gen_proto_conf.py  gen_topb_proto.py
